syntax = "proto3";

package cachely.v1;

import "google/api/annotations.proto";

option csharp_namespace = "Cachely.V1";
option go_package = "cachelyv1";
option java_multiple_files = true;
option java_outer_classname = "CacheApiProto";
option java_package = "com.cachely.v1";
option objc_class_prefix = "CXX";
option php_namespace = "Cachely\\V1";

// CacheAPI is a caching service that allows storage of arbitrary bytes
// addressed by a string key.
service CacheAPI {
  // Get retrieves a value from the cache.
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/cachely/v1/objects/{key}";
    };
  }

  // Put adds a new value to the cache.
  rpc Put(PutRequest) returns (PutResponse) {
    option (google.api.http) = {
      post: "/cachely/v1/objects";
      body: "*";
    };
  }

  // Delete removes a cached value from the cache.
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/cachely/v1/objects/{key}";
    };
  }
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  bytes value = 2;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message PutResponse {
  string key = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  string key = 1;
}
